test: 테스트 수정 및 repository 쿼리 수정 #11